--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ui-tractview",
-  "version": "1.0.2",
+  "name": "ui-lifeview",
+  "version": "1.0.0",
   "description": "tracts viewer",
   "main": "undefined",
   "scripts": {
