--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jquery": "^3.2.12",
     "jquery": "^3.2.1",
     "panning-orbit-controls": "^1.0.0",
-    "three": "^0.86.0"
+    "three": "^0.86.0",
+    "vue": "^2.5.16"
   }
 }
